Enum user_role {
  member
  creator
  admin
}

Enum request_status {
  pending
  approved
  rejected
}

Enum event_visibility {
  public
  unlisted
}

Enum photo_status {
  pending // Waiting in queue
  processing // Currently being worked on
  ready // Processed successfully
  failed // Error during processing
  hidden // Takedown requested by user
  deleted // Soft deleted by Admin
}

Enum claim_status {
  pending
  approved
  rejected
}

// ------------------------------------------
// AUTHENTICATION (Better-Auth)
// ------------------------------------------

Table user {
  id text [pk, note: 'Better-Auth String ID']
  username varchar [not null, unique]
  email varchar [not null, unique]
  email_verified boolean [not null, default: false]
  image text [note: 'Stored in runcam-display (Public Bucket, Watermarked)']
  role user_role [not null, default: 'member']

  phone varchar(32)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
  banned boolean [default: false]
  ban_reason text
  ban_expires timestamptz
}

Table session {
  id text [pk]
  expires_at timestamptz [not null]
  ip_address text
  user_agent text
  user_id text [not null]
  token text [not null, unique]
  impersonated_by text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table account {
  id text [pk]
  account_id text [not null]
  provider_id text [not null]
  user_id text [not null]
  access_token text
  refresh_token text
  expires_at timestamptz
  password text [note: 'Hashed password']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table verification {
  id text [pk]
  identifier text [not null]
  value text [not null]
  expires_at timestamptz [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

// ------------------------------------------
// CORE
// ------------------------------------------

Table creator_request {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id text [not null]
  status request_status [not null, default: 'pending']
  portfolio_link text
  motivation text
  reviewed_by text
  note text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    user_id [name: 'pending_request_unique', unique]
  }
}

Table event {
  id uuid [pk, default: `gen_random_uuid()`]
  name varchar(160) [not null]
  description text
  location text
  image text [note: 'Stored in runcam-display (Public Bucket, Watermarked)']
  starts_at timestamptz
  visibility event_visibility [not null, default: 'public']
  created_by text [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table photo {
  id uuid [pk, default: `gen_random_uuid()`]
  event_id uuid
  uploader_id text [not null]

  original_name text [note: 'e.g. DSC_1234.jpg']
  storage_path_raw text [not null, note: 'Stored in runcam-raw (Private Bucket)']
  storage_path_display text [note: 'Stored in runcam-display (Public Bucket, Watermarked)']

  width int
  height int
  taken_at timestamptz

  status photo_status [not null, default: 'pending']
  retry_count int [not null, default: 0]
  processing_error text

  faces_count int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table photo_embedding {
  id uuid [pk, default: `gen_random_uuid()`]
  photo_id uuid [not null]
  embedding vector(1024) [not null, note: 'faceres model produces 1024-dim embeddings']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (embedding) [type: hnsw, name: "photo_embedding_l2_idx", note: "L2 distance for image similarity"]
  }
}

Table user_embedding {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id text [not null]
  embedding vector(1024) [not null, note: 'faceres model produces 1024-dim embeddings']
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    (embedding) [type: hnsw, name: "user_embedding_l2_idx", note: "L2 distance for user similarity"]
  }
}

Table claim {
  id uuid [pk, default: `gen_random_uuid()`]
  photo_id uuid [not null]
  claimant_id text [not null]
  status claim_status [not null, default: 'approved']
  match_score float
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Ref: session.user_id > user.id [delete: cascade]
Ref: account.user_id > user.id [delete: cascade]
Ref: creator_request.user_id > user.id [delete: cascade]
Ref: creator_request.reviewed_by > user.id [delete: set null]
Ref: event.created_by > user.id [delete: no action]
Ref: photo.event_id > event.id [delete: set null]
Ref: photo.uploader_id > user.id [delete: no action]
Ref: photo_embedding.photo_id > photo.id [delete: cascade]
Ref: user_embedding.user_id > user.id [delete: cascade]
Ref: claim.photo_id > photo.id [delete: cascade]
Ref: claim.claimant_id > user.id [delete: cascade]
